fix(java17): replace deprecated getFirst() with get(0) in SpreadSheetModel
- Fix List.getFirst() deprecation for Java 17+ compatibility
- Replace with get(0) to maintain functionality
- Preserve existing null safety and logic flow
- Support modern Java versions while keeping existing behavior

Fixes: COMPILATION_ERROR_SPREADSHEET_GETFIRST